# easy-planner

./: .gitignore  EASYREADME.md  README.md  airsim_planning.sh  sh.sh
.catkin_tools/profiles/default/: devel_collisions.txt
src/detection/target_ekf/include/target_ekf/: target_ekf.hpp
src/detection/target_ekf/launch/: target_ekf.launch
src/detection/target_ekf/src/: target_ekf_node.cpp  target_ekf_sim_node.cpp
src/mapping/config/: rviz_sim.rviz
src/mapping/include/mapping/: mapping.h
src/mapping/src/: mapping.cc  mapping_nodelet.cpp  visualize_history_path.cpp
src/perception/: CMakeLists.txt
src/perception/launch/: perception.launch
src/perception/scripts/: perception_all_in_one.py
src/planning/DecompROS/decomp_ros_utils/include/decomp_geometry/: polyhedron.h
src/planning/kinematic/: CMakeLists.txt  package.xml
src/planning/kinematic/include/kinematic/: data_frame.hpp  kinematic.hpp
src/planning/kinematic/src/: kinematic.cpp
src/planning/planning/: CMakeLists.txt  package.xml
src/planning/planning/include/env/: env.hpp
src/planning/planning/include/prediction/: prediction.hpp
src/planning/planning/include/visualization/: visualization.hpp
src/planning/planning/launch/: airsim_fake_car_target.launch  planning_airsim.launch  simulation_airsim.launch
src/planning/planning/src/: planning_nodelet.cpp  test_node.cpp  traj_server.cpp
src/planning/scripts/: gui.py  logc2.py  target.py
src/planning/traj_opt/include/traj_opt/: geoutils.hpp  minco.hpp  poly_traj_utils.hpp  traj_opt.h
src/planning/traj_opt/src/: traj_opt.cc
src/quadrotor_msgs/: CMakeLists.txt
src/quadrotor_msgs/msg/: Kinematic.msg
src/traj_server/traj_server/: CMakeLists.txt  package.xml
src/traj_server/traj_server/launch/: cmd2airsim.launch  example.launch
src/traj_server/traj_server/src/: cmd2airsim.cpp  example.cpp  frame_transform.cpp  traj_server.cpp
src/traj_server/trajectory_msgs/: CMakeLists.txt  package.xml
src/traj_server/trajectory_msgs/msg/: Trajectory.msg  TrajectoryPoint.msg
src/uav_simulator/local_sensing/: CMakeLists.txt
src/uav_simulator/local_sensing/src/: euroc.cpp  pcl_render_node.cpp
src/uav_simulator/mockamap/src/: ces_randommap.cpp  maps.cpp  mockamap.cpp
src/uav_simulator/odom_vis/odom_visualization/src/: odom_visualization.cpp  odom_visualization_car.cpp
src/uav_simulator/so3_quadrotor/src/: so3_quadrotor_nodelet.cpp
