<?xml version="1.0"?>
<package format="2">
  <name>trajectory_msgs</name>
  <version>0.6.13</version>
  <description>The trajectory_msgs package</description>

  <maintainer email="tianyouyu9@163.com">Woods</maintainer>

  <author email="woods@example.com">Woods</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
